log_compile
Using built-in specs.
COLLECT_GCC=g++
Target: x86_64-pc-linux-gnu
Configured with: ../gcc-7.2.0/configure --prefix=/usr/local/gcc-7.2.0
Thread model: posix
gcc version 7.2.0 (GCC) 
COLLECT_GCC_OPTIONS='-v' '-c' '-g' '-std=c++11' '-Wall' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 /usr/local/gcc-7.2.0/lib/gcc/x86_64-pc-linux-gnu/7.2.0/cc1plus -quiet -v -D_GNU_SOURCE main.cpp -quiet -dumpbase main.cpp -mtune=generic -march=x86-64 -auxbase main -g -Wall -std=c++11 -version -o /tmp/ccjcuZOP.s
GNU C++11 (GCC) version 7.2.0 (x86_64-pc-linux-gnu)
	compiled by GNU C version 7.2.0, GMP version 6.0.0, MPFR version 3.1.2, MPC version 1.0.2, isl version none
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
ignoring nonexistent directory "/usr/local/gcc-7.2.0/lib64/gcc/x86_64-pc-linux-gnu/7.2.0/../../../../x86_64-pc-linux-gnu/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/gcc-7.2.0/lib64/gcc/x86_64-pc-linux-gnu/7.2.0/../../../../include/c++/7.2.0
 /usr/local/gcc-7.2.0/lib64/gcc/x86_64-pc-linux-gnu/7.2.0/../../../../include/c++/7.2.0/x86_64-pc-linux-gnu
 /usr/local/gcc-7.2.0/lib64/gcc/x86_64-pc-linux-gnu/7.2.0/../../../../include/c++/7.2.0/backward
 /usr/local/gcc-7.2.0/lib64/gcc/x86_64-pc-linux-gnu/7.2.0/include
 /usr/local/include
 /usr/local/gcc-7.2.0/include
 /usr/local/gcc-7.2.0/lib64/gcc/x86_64-pc-linux-gnu/7.2.0/include-fixed
 /usr/include
End of search list.
GNU C++11 (GCC) version 7.2.0 (x86_64-pc-linux-gnu)
	compiled by GNU C version 7.2.0, GMP version 6.0.0, MPFR version 3.1.2, MPC version 1.0.2, isl version none
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
Compiler executable checksum: d926a5fd199708005aec3c20f44dab6a
main.cpp: In function ‘void handle_word(char*, char (*)[100])’:
main.cpp:104:11: error: expected primary-expression before ‘)’ token
     while()
           ^
main.cpp:108:8: error: expected ‘while’ before ‘;’ token
       };
        ^
main.cpp:108:8: error: expected ‘(’ before ‘;’ token
main.cpp:108:8: error: expected primary-expression before ‘;’ token
main.cpp:108:8: error: expected ‘)’ before ‘;’ token
main.cpp:88:8: warning: unused variable ‘c_buffer’ [-Wunused-variable]
   char c_buffer = '\0';
        ^~~~~~~~
main.cpp:90:8: warning: unused variable ‘add’ [-Wunused-variable]
   bool add = true;
        ^~~
main.cpp:91:7: warning: unused variable ‘wordLen’ [-Wunused-variable]
   int wordLen = strlen(word);
       ^~~~~~~
